move day one solution into scaffolded classes